# no-thanks-rl

./: .gitignore  README.md  justfile  pyproject.toml
nothanks/: __init__.py  approx_br.py  arena.py  belief.py  beliefnet.py  cli.py  demo.py  distill.py  engine.py  exploit.py  features.py  heuristic.py  imperfect.py  imperfect_demo.py  ismcts.py  mc_demo.py  montecarlo.py  solver.py  train.py  valuefn.py  web.py
nothanks/static/: index.html
scripts/: adjudicate_opening3.py  adjudicate_opening3_why.py  adjudicate_smoke16_revisit.py  step11_greedy_info.py  step11_ismcts.py  step12_adjudicate.py  step13_arena.py  step13_train_god.py  step14_c_sweep.py  step16_grade.py  step16_train_v2.py  step17_search_br.py  step19_grade.py  step19_grade_45p.py  step19_train_45p.py  step19_train_v3.py
tests/: test_approx_br.py  test_arena.py  test_belief.py  test_beliefnet.py  test_cli.py  test_distill.py  test_engine.py  test_exploit.py  test_honest_play.py  test_imperfect.py  test_ismcts.py  test_montecarlo.py  test_train.py  test_valuefn.py  test_web.py
